<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.LoginFragment"
        android:background="@color/themeBackground">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_120dp"
            android:layout_marginTop="@dimen/dimen_80dp"
            android:src="@drawable/ic_login"
            android:elevation="@dimen/dimen_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:text="@string/user_login"
            android:textColor="@color/primaryColour"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

        <TextView
            android:id="@+id/tv_otp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:textSize="@dimen/dimen_12sp"
            android:textColor="@color/PrimaryTextColor"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:text="@string/we_will_send_you_an_one_time_otp_on_this_given_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <TextView
            android:id="@+id/tv_enter_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:textSize="@dimen/dimen_16sp"
            android:textColor="@color/primaryColour"
            android:text="@string/enter_mobile_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_otp_text" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginStart="@dimen/dimen_40dp"
            android:layout_marginEnd="@dimen/dimen_40dp"
            android:elevation="@dimen/dimen_5dp"
            android:paddingStart="@dimen/dimen_5dp"
            android:drawableStart="@drawable/std_code"
            android:hint="@string/mobile_number_hint"
            android:textColor="@color/black"
            android:background="@drawable/et_number_style"
            android:textAlignment="center"
            android:maxLength="10"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_number" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_get_otp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:text="@string/get_otp"
            android:elevation="@dimen/dimen_5dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/primaryColour"
            android:background="@drawable/login_button_style"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:layout_marginStart="@dimen/dimen_25dp"
            android:layout_marginEnd="@dimen/dimen_25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_get_otp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>